Updated project link

--- a/spirograph.html
+++ b/spirograph.html
@@ -79,7 +79,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>
             Interactive Spirograph
-            <a target="_blank" href="https://github.coecis.cornell.edu/rs923/cs4620-c1"> <i class="bx bx-link"></i> </a>
+            <a target="_blank" href="https://github.com/srjsissel/interactive-spirograph"> <i class="bx bx-link"></i> </a>
           </h2>
           <ol>
             <li><a href="index.html#hero">Home</a></li>
